--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Finance Multi-Tool Suite — Attractive Theme</title>
+<title>Finance Multi-Tool Suite</title>
 <style>
   :root{
     --bg1: linear-gradient(135deg,#0f172a 0%, #0b3a66 40%, #05223a 100%);
@@ -177,7 +177,7 @@
         </div>
         <div class="title">
           <h1>Finance Multi-Tool Suite</h1>
-          <p>Financial Interest Visualization + Budgeting + Loan checks — single page</p>
+          <p>Financial Interest Visualization + Budgeting + Loan checks</p>
         </div>
       </div>
 
@@ -192,12 +192,12 @@
         <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:12px">
           <div>
             <div class="tiny">Student</div>
-            <div style="font-weight:700">Your Name Here</div>
-            <div class="muted tiny">Course / Assignment</div>
+            <div style="font-weight:700">R RAGUL RENGANATH</div>
+            <div class="muted tiny">MBA FINANCE</div>
           </div>
           <div style="text-align:right">
-            <div class="tiny">Due</div>
-            <div style="font-weight:700">DD-MM-YYYY</div>
+            <div class="tiny">Designed on</div>
+            <div style="font-weight:700">27/11/2025</div>
           </div>
         </div>
 
@@ -406,7 +406,7 @@
           </div>
         </div>
 
-        <footer class="note">Single-file assignment tool • Save & submit the HTML file • No back-end required</footer>
+        <footer class="note">Created with passion</footer>
       </section>
     </main>
   </div>
